Quick Sort completed

--- a/Sorting Techniques.ipynb
+++ b/Sorting Techniques.ipynb
@@ -70,7 +70,7 @@
     "<td>n<sup>2</sup></td>\n",
     "<td>log(n)</td>\n",
     "<td>No</td>\n",
-    "<td>Partitioning</td>\n",
+    "<td>Partitioning (Divide & Conquer)</td>\n",
     "</tr>\n",
     "</table>"
    ]
@@ -171,7 +171,54 @@
    "metadata": {},
    "source": [
     "* It has a worst case time complexity of <b>O(N<sup>2</sup>)</b> => It is very slow for large data sets.\n",
-    "* Insertion sort has a lot of swaps, which can make it slow."
+    "* Insertion sort has a lot of swaps, which can make it slow.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b><h3>Quick Sort:</h3></b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* It is a divide and conquer algorithm that picks an element as a pivot and partitions the given list into 2 sub lists around that pivot in its correct position in the sorted array.\n",
+    "* There are several choices to pick the pivot:<ol><li>Pick the first element</li><li>Pick the last element</li><li>Pick the middle element</li><li>Pick a random element</i></ol>\n",
+    "* "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Advantages:</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* It is efficient on large data sets. It is slightly faster than merge sort and heap sort for randomized data particularly on large distributions.\n",
+    "* It has a low overhead, as it only requires a small amount of memory to function."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Disadvantages:</h4>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The worst case time complexity is O(N<sup>2</sup>) => Result of choosing a bad pivot.\n",
+    "* It is not efficient for small data sets.\n",
+    "* It is not a stable sorting technique."
    ]
   },
   {
