Randomized version of Quick Sort implemented

--- a/Quick Sort.ipynb
+++ b/Quick Sort.ipynb
@@ -76,6 +76,44 @@
     "quick_sort(l,0,len(l)-1)\n",
     "print(\"After : \",l,len(l))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before:  [1, 5, 2, 9, 5, 2, 3, 6, 2, 1, 4, 1, 5, 2, 51, 2, 12, 3, 123, 123, 42, 24, 24, 4645, 64, 2, 3, 2, 1, 14] 30\n",
+      "After :  [1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 4, 5, 5, 5, 6, 9, 12, 14, 24, 24, 42, 51, 64, 123, 123, 4645] 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Randomized Quick Sort\n",
+    "import random\n",
+    "\n",
+    "def randomized_partition(l, low, high):\n",
+    "    pivot = random.randint(low, high)\n",
+    "    l[high], l[pivot] = l[pivot], l[high]\n",
+    "    return partition(l, low, high)\n",
+    "\n",
+    "def randomized_quick_sort(l, low, high):\n",
+    "    if low >= high or low < 0:\n",
+    "        return\n",
+    "    \n",
+    "    pivot = randomized_partition(l, low, high)\n",
+    "    randomized_quick_sort(l, low, pivot - 1)\n",
+    "    randomized_quick_sort(l, pivot + 1, high)\n",
+    "\n",
+    "l=[1,5,2,9,5,2,3,6,2,1,4,1,5,2,51,2,12,3,123,123,42,24,24,4645,64,2,3,2,1,14]\n",
+    "print(\"Before: \",l,len(l))\n",
+    "\n",
+    "randomized_quick_sort(l,0,len(l)-1)\n",
+    "print(\"After : \",l,len(l))"
+   ]
   }
  ],
  "metadata": {
