Insertion sort note added

--- a/Insertion Sort.ipynb
+++ b/Insertion Sort.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4>Iterate through the array and place the current element in the correct place in sorted part of the array.\n",
+    "1 2 3 5 4 9. If we are currently at 4(index 5), the left part is sorted. We pick the correct position for 4 and the array becomes 1 2 3 4 5 9.\n",
+    "</h4>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,6 +32,7 @@
     "            l[j+1]=l[j]\n",
     "            j-=1\n",
     "        l[j+1]=ele\n",
+    "        # print(l)\n",
     "\n",
     "l=[1,5,2,9,5,2,3,6,2,1,4,1,5,2,51,2,12,3,123,123,42,24,24,4645,64,2,3,2,1,14]\n",
     "print(\"Before: \",l,len(l))\n",
